Changes in Version 0.1.3
========================
- Substantial updates to documentation
  - including publication list, case studies
- Minor bugfixes throughout
- Expanded unit testing
- Several functions deprecated, previously deprecated functions removed
- Number of base level imports limited
- MAJOR BUG in IRBEM library (T01S and TS04 models) fixed.
datamodel
 - new count method on dmarray
 - HDF5 output now supports many more types
 - output from datamodel to HTML table added
irbempy
 - Updated IRBEM library (including major bugfix to T01S and TS04)
 - 'custom' internal B-field model set to Dungey model (dipole + uniform)
 - revised multiprocessing of get_Lstar to use standard library
 - new get_Lm function
LANLstar
 - LANLstar v3 (with improved UI) now packaged with SpacePy
 - Fortran backend replaced (now requires ffnet Python package)
omni
 - additional OMNI parameters added to hourly database
pycdf
 - Convert to numpy-based backend, substantially faster/more flexible
 - Speed up extending variables with additional data (roughly 4x as fast)
 - Better integration with datamodel
time
 - Ticktock is now iterable and adds/subtracts datetime.timedeltas
 - Ticktock time storage is array-based and now has insert and remove methods
toolbox
 - hypot function speed-up

Changes in Version 0.1.2
========================
- Overhaul of all documentation for better organization and clarify
- New C backends speed up several functions in toolbox and time
- Minor bugfixes throughout
- Support for newer compilers on Windows
- Include Fortran runtime with Windows binary installers
Datamodel
 - Support for JSON-headed ASCII data read/write
Empiricals
 - New pitch angle model
pybats
 - PWOM added
plot
 - New EventClicker to manually identify event times on a plot

Changes in Version 0.1.1
========================
- new config file structure
- overhaul of source distribution build
- __contact__ attribute added to each SpacePy module (FR: 3424949)
Datamodel