@@ -277,43 +277,6 @@ class SimpleFunctionTests(unittest.TestCase):
             self.assertEqual(val, tb.pmm(data[i]))
         self.assertEqual([[1, 6], [5, 24], [6.0, 67.340000000000003]], tb.pmm(*data) )
 
-    def test_leap_year(self):
-        """Leap_year should give known output for known input"""
-        leaps = [1600, 1604, 1608, 1612, 1616, 1620, 1624, 1628, 1632, 1636,
-            1640, 1644, 1648, 1652, 1656, 1660, 1664, 1668, 1672, 1676,
-            1680, 1684, 1688, 1692, 1696, 1704, 1708, 1712, 1716, 1720,
-            1724, 1728, 1732, 1736, 1740, 1744, 1748, 1752, 1756, 1760,
-            1764, 1768, 1772, 1776, 1780, 1784, 1788, 1792, 1796, 1804,
-            1808, 1812, 1816, 1820, 1824, 1828, 1832, 1836, 1840, 1844,
-            1848, 1852, 1856, 1860, 1864, 1868, 1872, 1876, 1880, 1884,
-            1888, 1892, 1896, 1904, 1908, 1912, 1916, 1920, 1924, 1928,
-            1932, 1936, 1940, 1944, 1948, 1952, 1956, 1960, 1964, 1968,
-            1972, 1976, 1980, 1984, 1988, 1992, 1996, 2000, 2004, 2008,
-            2012, 2016, 2020, 2024, 2028, 2032, 2036, 2040]
-        for i in range(1600, 2041):
-            if i in leaps:
-                self.assertTrue(tb.leap_year(i))
-            else:
-                self.assertFalse(tb.leap_year(i))
-
-        data = ( 1993 + array(range(10)), 1900, [1993 + val for val in range(10)] )
-        real_ans = ( array([365, 365, 365,  366, 365, 365, 365,  366, 365, 365]),
-                     365,
-                     [365, 365, 365,  366, 365, 365, 365,  366, 365, 365] )
-        for i, val in enumerate(real_ans):
-            if i == 0:
-                self.assertEqual(val.tolist(), tb.leap_year(data[i], True))
-            else:
-                self.assertEqual(val, tb.leap_year(data[i], True))
-        real_ans = ( array([False, False, False,  True, False, False, False, True, False, False]),
-                     False,
-                     [False, False, False, True, False, False, False,  True, False, False] )
-        for i, val in enumerate(real_ans):
-            if i == 0:
-                self.assertEqual(val.tolist(), tb.leap_year(data[i], False))
-            else:
-                self.assertEqual(val, tb.leap_year(data[i], False))
-
     def test_rad2mlt(self):
         """rad2mlt should give known answers (regression)"""
         real_ans = array([ -6.        ,  -4.10526316,  -2.21052632,  -0.31578947,
